# 5GCity-OpenSourceMano

./: .gitignore  .gitignore-common  .testr.conf  Dockerfile  Dockerfile.fromdeb  Dockerfile.local  Jenkinsfile  MANIFEST.in  Makefile  README  README.md  README.rst  bower.json  db_base.py  httpserver.py  kafkad  nfvo.py  nfvo_db.py  openmano  openmano.service  openmano_schemas.py  openmanoconfig.py  openmanod  openmanod.cfg  openmanod.py  osm-ro.service  python3-osm-common.postinst  python3-osm-lcm.postinst  requirements.txt  setup.cfg  setup.py  stage-archive.sh  stdeb.cfg  test-requirements.txt  test_requirements.txt  tox.ini  vim_thread.py  vimconn.py  vimconn_openstack.py  vimconn_openvim.py  (+2 more)
core/: __init__.py  kafka.service
database_utils/: dump_db.sh  init_mano_db.sh  install-db-server.sh  mano_db_structure.sql  migrate_mano_db.sh  migrate_vim_db.sh
debian/: control
descriptor-packages/: .gitignore  Makefile  README
devops-stages/: stage-archive.sh  stage-build.sh  stage-test.sh
devops_stages/: stage-build.sh  stage-test.sh
doc/: MON_install_guide.rst  MON_usage_guide.rst
docker/: Dockerfile  Dockerfile-fromdeb  Dockerfile-local  docker-compose-3c.yml  docker-compose.yaml  openmano-compose.yml  tests.dockerfile  tests.yml
installers/: README  docker-compose.yaml  export_ips  full_install_osm.sh  install_from_source  install_from_source.sh  install_osm.sh  install_osm_release.sh  nat_osm  shim_install_osm.sh
instancehandler/: urls.py  views.py
jenkins/: README  SETTINGS
juju-charms/: Dockerfile  Makefile
lcm/: Dockerfile  dbbase.py  dbmemory.py  lcm.py
module-blueprints/: README
(+760 files in other folders)
